[tool.poetry]
name = "coinbaseintl"
version = "0.1.0"
description = ""
authors = ["rede akbar wijaya <ribonred@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
